--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ input {
 }
 
 .option-btn {
-    background-color: #f0f0f0;
+    background-color: #120a0a;
     border: 1px solid #ddd;
     padding: 10px 20px;
     margin: 5px;
